--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Setup Flutter SDK
+      # Setup Flutter SDK with a specific version
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '2.10.0' # Replace with the desired Flutter version
 
       - name: Install dependencies
         run: flutter pub get
